--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,6 +5,6 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "fastapi>=0.115.7",
+    "fastapi[standard]>=0.115.7",
     "uvicorn>=0.34.0",
 ]
