--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi[standard]>=0.115.7",
+    "manim>=0.19.0",
     "uvicorn>=0.34.0",
 ]
