--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,7 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "aio-pika>=9.5.4",
     "fastapi[standard]>=0.115.7",
-    "manim>=0.19.0",
     "uvicorn>=0.34.0",
 ]
