--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,7 +5,11 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "aio-pika>=9.5.4",
     "fastapi[standard]>=0.115.7",
-    "manim>=0.19.0",
+    "firebase-admin>=6.6.0",
+    "langchain>=0.3.19",
+    "langchain-core>=0.3.37",
+    "langchain-google-genai>=2.0.10",
     "uvicorn>=0.34.0",
 ]
