--- a/renderer/Dockerfile
+++ b/renderer/Dockerfile
@@ -10,5 +10,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy application code
 COPY . .
 
+USER root
+
 # Run the renderer
 CMD ["python", "worker.py"]
