--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       retries: 3
 
   backend:
-    build: 
+    build:
       context: ./backend
       dockerfile: Dockerfile
     ports:
@@ -19,7 +19,7 @@ services:
     environment:
       - RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672/
       - CORS_ORIGINS=http://localhost:3000
-      - SERVER_ENV=development
+      - NODE_ENV=development
       - RUNNING_IN_DOCKER=true
       - OPENAI_API_KEY=${OPENAI_API_KEY}
     volumes:
@@ -31,16 +31,16 @@ services:
         condition: service_healthy
 
   renderer:
-    build: 
+    build:
       context: ./renderer
       dockerfile: Dockerfile
     environment:
       - RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672/
       - OUTPUT_PATH=/shared/videos
-      - TEMP_DIR=/app/temp 
+      - TEMP_DIR=/app/temp
     volumes:
       - ./videos:/shared/videos:rw
-      - type: tmpfs 
+      - type: tmpfs
         target: /app/temp
     depends_on:
       rabbitmq:
