--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,9 +17,9 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - RABBITMQ_URL=RABBITMQ_URL=${RABBITMQ_URL}
+      - RABBITMQ_URL=${RABBITMQ_URL}
       - CORS_ORIGINS=${CORS_ORIGINS}
-      - SERVER_ENV=production
+      - SERVER_ENV=development
       - RUNNING_IN_DOCKER=true
       - OPENAI_API_KEY=${OPENAI_API_KEY}
     volumes:
@@ -60,6 +60,10 @@ services:
       - WEED_FS_S3_DIR=/data
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
       - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+      - WEED_S3_CORS_ALLOW_ORIGIN=${CORS_ORIGINS}
+      - WEED_S3_CORS_ALLOW_METHODS="GET,POST,PUT,DELETE"
+      - WEED_S3_CORS_ALLOW_HEADERS="Authorization,Content-Type,X-Amz-Date,X-Amz-Content-Sha256,Content-Length"
+      - WEED_S3_CORS_MAX_AGE="3600"
 
 volumes:
   seaweedfs_data:
