Changes to renderer to ensure that it works with the list of scenes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - RABBITMQ_URL=${RABBITMQ_URL}
+      - RABBITMQ_URL=${RABBITMQ_URL:-amqp://guest:guest@rabbitmq:5672/}
       - CORS_ORIGINS=${CORS_ORIGINS}
       - SERVER_ENV=production
       - RUNNING_IN_DOCKER=true
