--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,106 @@
-aio-pika>=9.5.4
-fastapi[standard]>=0.115.7
-uvicorn>=0.34.0
-langchain>=0.3.19
-langchain-core>=0.3.37
-langchain-google-genai>=2.0.10
-firebase-admin>=6.6.0
-langchain-openai>=0.3.7
+aio-pika==9.5.5
+aiobotocore==2.21.1
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.16
+aioitertools==0.12.0
+aiormq==6.8.1
+aiosignal==1.3.2
+annotated-types==0.7.0
+anyio==4.8.0
+attrs==25.3.0
+botocore==1.37.1
+cachecontrol==0.14.2
+cachetools==5.5.2
+certifi==2024.12.14
+cffi==1.17.1
+charset-normalizer==3.4.1
+click==8.1.8
+cryptography==44.0.2
+distro==1.9.0
+dnspython==2.7.0
+email-validator==2.2.0
+exceptiongroup==1.2.2
+fastapi==0.115.7
+fastapi-cli==0.0.7
+filetype==1.2.0
+firebase-admin==6.6.0
+frozenlist==1.6.0
+google-ai-generativelanguage==0.6.16
+google-api-core==2.24.1
+google-api-python-client==2.163.0
+google-auth==2.38.0
+google-auth-httplib2==0.2.0
+google-cloud-core==2.4.2
+google-cloud-firestore==2.20.1
+google-cloud-storage==3.1.0
+google-crc32c==1.6.0
+google-resumable-media==2.7.2
+googleapis-common-protos==1.69.1
+grpcio==1.70.0
+grpcio-status==1.70.0
+h11==0.14.0
+httpcore==1.0.7
+httplib2==0.22.0
+httptools==0.6.4
+httpx==0.28.1
+idna==3.10
+jinja2==3.1.5
+jiter==0.9.0
+jmespath==1.0.1
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain==0.3.20
+langchain-core==0.3.41
+langchain-google-genai==2.0.11
+langchain-openai==0.3.7
+langchain-text-splitters==0.3.6
+langsmith==0.3.12
+markdown-it-py==3.0.0
+markupsafe==3.0.2
+mdurl==0.1.2
+msgpack==1.1.0
+multidict==6.1.0
+openai==1.75.0
+orjson==3.10.15
+packaging==24.2
+pamqp==3.3.0
+propcache==0.3.0
+proto-plus==1.26.0
+protobuf==5.29.3
+pyasn1==0.6.1
+pyasn1-modules==0.4.1
+pycparser==2.22
+pydantic==2.10.6
+pydantic-core==2.27.2
+pygments==2.19.1
+pyjwt==2.10.1
+pyparsing==3.2.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-multipart==0.0.20
+pyyaml==6.0.2
+regex==2024.11.6
+requests==2.32.3
+requests-toolbelt==1.0.0
+rich==13.9.4
+rich-toolkit==0.13.2
+rsa==4.9
+shellingham==1.5.4
+six==1.17.0
+sniffio==1.3.1
+sqlalchemy==2.0.38
+starlette==0.45.3
+tenacity==9.0.0
+tiktoken==0.9.0
+tqdm==4.67.1
+typer==0.15.1
+typing-extensions==4.12.2
+uritemplate==4.1.1
+urllib3==2.3.0
+uvicorn==0.34.0
+uvloop==0.21.0
+watchfiles==1.0.4
+websockets==14.2
+wrapt==1.17.2
+yarl==1.18.3
+zstandard==0.23.0
