--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "aio-pika>=9.5.4",
+    "aiobotocore>=2.21.1",
     "fastapi[standard]>=0.115.7",
     "firebase-admin>=6.6.0",
     "langchain>=0.3.19",
