--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     ports:
       - "5672:5672"
       - "15672:15672"
+    mem_limit: 512m
     healthcheck:
       test: ["CMD", "rabbitmq-diagnostics", "check_port_connectivity"]
       interval: 30s
@@ -19,9 +20,13 @@ services:
     environment:
       - RABBITMQ_URL=${RABBITMQ_URL:-amqp://guest:guest@rabbitmq:5672/}
       - CORS_ORIGINS=${CORS_ORIGINS}
-      - SERVER_ENV=production
+      - SERVER_ENV=development
       - RUNNING_IN_DOCKER=true
       - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - AWS_REGION=us-east
+      - AWS_ACCESS_KEY=${AWS_ACCESS_KEY_ID}
+      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+      - S3_PUBLIC_URL=${S3_PUBLIC_URL}
     volumes:
       - ./videos:/shared/videos:ro
     extra_hosts:
@@ -64,6 +69,11 @@ services:
       - WEED_S3_CORS_ALLOW_METHODS="GET,POST,PUT,DELETE"
       - WEED_S3_CORS_ALLOW_HEADERS="Authorization,Content-Type,X-Amz-Date,X-Amz-Content-Sha256,Content-Length"
       - WEED_S3_CORS_MAX_AGE="3600"
+    healthcheck:
+          test: curl -f http://localhost:8333/ || exit 1
+          interval: 5s
+          timeout: 2s
+          retries: 10
 
 volumes:
   seaweedfs_data:
