--- a/renderer/Dockerfile
+++ b/renderer/Dockerfile
@@ -17,5 +17,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy application code
 COPY . .
 
+ENV PYTHONPATH=/app:$PYTHONPATH
+
 # Run the renderer
 CMD ["python", "main.py"]
