--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --env node"
+    "test": "jest --env node --runInBand"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.758.0",
