--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --env node --runInBand"
+    "jest": "jest --env node --runInBand",
+    "test": "npm run jest"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.758.0",
@@ -62,6 +63,7 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5"
+    "typescript": "^5",
+    "wait-on": "^8.0.3"
   }
 }
